tests/fixtures/negative/28_array_set_oob_abort.yc
import "std/array" as array

fn main() {
    xs := array.new([]i32, 1)
    xs = array.append(xs, 10)
    array.set(xs, 2, 20)
    array.free(xs)
}
